--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: page
 permalink: /404.html
 title: "Page not found"
-description: "Looks like there has been a mistake. Nothing exists here."
+description: "Oops! You've discovered a black hole in cyberspace. This page seems to be lost in another dimension."
 redirect: true
 ---
 
